Update configuration and styles for documentation site; remove unnecessary elements and enhance SCSS structure
- Removed the jekyll-theme-cayman from the configuration as requested.
- Eliminated duplicate gems from the Gemfile to streamline dependencies.
- Enhanced the SCSS structure by importing variables and mixins for better organization and maintainability.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+# Removed theme: jekyll-theme-cayman as requested
 title: "Music Decade Classification"
 description: "A systematic approach to building and optimizing a Deep Neural Network for music decade classification using the Million Song Dataset."
 author: "Your Name"
