--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -6,10 +6,7 @@ gem "webrick", "~> 1.7"
 
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.12"
-  gem "jekyll-seo-tag", "~> 2.8"
-  gem "jekyll-sitemap"
-  gem "jekyll-github-metadata"
+  # Removed duplicate gems already included by github-pages
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
